<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/wallpaper_fragment">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/wallpaperFragment"
                    android:enabled="true"
                    android:icon="@drawable/ic_drag_handle"
                    android:title="@string/wallpaper" />
            </group>
        </menu>
    </item>

    <item android:title="@string/other_fragments">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/notificationFragment"
                    android:enabled="true"
                    android:icon="@drawable/ic_notifications_none"
                    app:showAsAction="always"
                    android:title="@string/notification" />

                <item
                    android:id="@+id/profileFragment"
                    android:enabled="true"
                    android:icon="@drawable/ic_contacts"
                    android:title="@string/profile" />
            </group>
        </menu>
    </item>

</menu>
