<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.wallpaper.dashboard.details.WallpaperDetailsFragment">

    <data>

        <variable
            name="wallpaperDetailsViewModel"
            type="com.alexchan.wallpaper.ui.wallpaper.dashboard.details.WallpaperDetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/titleTopToolbar"
                style="@style/UnsplashToolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:theme="@style/TitleUsernameBold"
                app:menu="@menu/title_details_top_app_bar"
                app:navigationContentDescription="@string/back_to_dashboard"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios"
                app:title="@{wallpaperDetailsViewModel.userPhotoCollection.user.name}"
                app:titleTextColor="@color/colorTitleText"
                tools:title="@string/unsplash" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            style="@style/UnsplashDayNightStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                style="@style/UnsplashDayNightStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/userLocationTextView"
                    style="@style/TextLocationStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_baseline_location_on"
                    android:drawablePadding="5dp"
                    android:text="@{wallpaperDetailsViewModel.displayUserLocation}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/userProfileImageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="wrap"
                    tools:text="@string/userLocation" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userProfileImageView"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:civ_border_color="@color/colorSecondaryVariant"
                    app:civ_border_width="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:userProfileImage="@{wallpaperDetailsViewModel.displayUserImage}"
                    tools:src="@drawable/ic_baseline_cloud_off" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/userFollowButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="false"
                    android:text="@string/userFollow"
                    android:textColor="#bdbdbd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/userProfileImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/colorLightGrey" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/UnsplashDayNightStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/selected_dot_indicator"
                    android:src="@drawable/dot_icon_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.515"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/dot_icon_dark"
                    android:contentDescription="@string/default_dot_indicator"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.515"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/dotOneImageView"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/selected_dot"
                    android:backgroundTint="@android:color/black"
                    android:contentDescription="@string/selected_dot_indicator"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/dotTwoImageView"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/default_dot"
                    android:contentDescription="@string/default_dot_indicator"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                style="@style/UnsplashDayNightStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/userTotalPhotoButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@{wallpaperDetailsViewModel.displayUserTotalPhotos}"
                    android:textColor="#8d8d8d"
                    app:rippleColor="@color/colorSecondary"
                    tools:text="@string/userTotalPhotos" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@{wallpaperDetailsViewModel.displayUserTotalLiked}"
                    android:textColor="#bdbdbd"
                    tools:text="@string/userTotalLiked" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@{wallpaperDetailsViewModel.displayUserTotalCollections}"
                    android:textColor="#bdbdbd"
                    tools:text="@string/userTotalCollections" />

            </LinearLayout>

            <FrameLayout
                style="@style/UnsplashDayNightStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/photoDetailsGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:listDataDetails="@{wallpaperDetailsViewModel.userPhotos}"
                    app:spanCount="2"
                    tools:itemCount="16"
                    tools:listitem="@layout/item_details_gridview" />

                <ImageView
                    android:id="@+id/statusImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/unsplash_api_status"
                    app:unsplashApiStatus="@{wallpaperDetailsViewModel.status}" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/statusLottieAnimationView"
                    unsplashApiStatusWithLottie="@{wallpaperDetailsViewModel.status}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="?attr/actionBarSize"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintWidth_percent="1"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/no_internet_connection" />

            </FrameLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
