<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.wallpaper.dashboard.DashboardFragment">

    <data>
        <variable
            name="dashboardViewModel"
            type="com.alexchan.wallpaper.ui.wallpaper.dashboard.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photosGrid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@id/paginationLinearLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:listData="@{dashboardViewModel.photoProperties}"
            style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
            tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            tools:spanCount="2"
            tools:itemCount="16"
            tools:listitem="@layout/item_gridview" />

        <ImageView
            android:id="@+id/statusImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:layout_constraintBottom_toBottomOf="@id/photosGrid"
            app:layout_constraintLeft_toLeftOf="@id/photosGrid"
            app:layout_constraintRight_toRightOf="@id/photosGrid"
            app:layout_constraintTop_toTopOf="@id/photosGrid"
            app:unsplashApiStatus="@{dashboardViewModel.status}"
            android:contentDescription="@string/unsplash_api_status" />

        <LinearLayout
            android:id="@+id/paginationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/photosGrid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/UnsplashPagination">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/previousButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/previous" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pageNumberTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:visibility="gone"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/next" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
